Заменяю списки на ReferenceSet и оптимизирую работу с коллекциями.